Implementation of arrow buttons in html and css

--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -7,6 +7,11 @@
 
 		<title>Title in the tab</title>
 
+        <!-- Icons -->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
+
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -15,20 +20,20 @@
 
 		<h1>Which Cocktail?</h1>
 		<input type="text" name="" value="">
-		<button type="button" name="button">Get Cocktail</button>
-		<h2>Name</h2>
+		<button class="button" type="button" name="button">Get Cocktail</button>
 		<sectionc class="content">
-			<p></p>
+            <div  class="col-1">
+                <h2>Name</h2>
+                <p></p>
+            </div>
 			<img src="" alt="">
 			<div>
 				<h3></h3>
-				<ul>
-					
-				</ul>
-			
+				<ul></ul>
 			</div>
+            <button class="btn btn-next" hidden><i class='bx bx-chevron-right'></i></button>
+            <button class="btn btn-prev" hidden><i class='bx bx-chevron-left'></i></button>
 		</section>
-
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
