Implementation of right arrow interactions in js, addition of the hidden class in html with its style in css

--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -31,8 +31,8 @@
 				<h3></h3>
 				<ul></ul>
 			</div>
-            <button class="btn btn-next" hidden><i class='bx bx-chevron-right'></i></button>
-            <button class="btn btn-prev" hidden><i class='bx bx-chevron-left'></i></button>
+            <button class="btn btn-next hidden" ><i class='bx bx-chevron-right'></i></button>
+            <button class="btn btn-prev hidden" ><i class='bx bx-chevron-left'></i></button>
 		</section>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
