Add font styles in html and css

--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -10,7 +10,10 @@
         <!-- Icons -->
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-
+		<!-- fonts -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Abel&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/style.css">
@@ -22,7 +25,7 @@
 		<button class="button" type="button" name="button">Get Cocktail</button>
 		<sectionc class="content">
             <div  class="col-1">
-                <h2>Name</h2>
+                <h2></h2>
                 <p></p>
             </div>
 			<img src="" alt="">
