--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -23,7 +23,7 @@
 		<h1>Which Cocktail?</h1>
 		<input type="text" name="" value="">
 		<button class="button" type="button" name="button">Get Cocktail</button>
-		<sectionc class="content">
+		<sectionc class="content content-background">
             <div  class="col-1">
                 <h2></h2>
                 <p></p>
