Implementation of random button in html and js

--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -23,6 +23,7 @@
 		<h1>Which Cocktail?</h1>
 		<input type="text" name="" value="">
 		<button class="button" type="button" name="button">Get Cocktail</button>
+		<button class="random-btn" type="button" name="button">Get Cocktail</button>
 		<sectionc class="content content-background">
             <div  class="col-1">
                 <h2></h2>
