--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -22,9 +22,9 @@
 
 		<h1>Which Cocktail?</h1>
 		<input type="text" name="" value="">
-		<button class="button" type="button" name="button">Get Cocktail</button>
-		<button class="random-btn" type="button" name="button">Get Cocktail</button>
-		<sectionc class="content content-background">
+		<button class="button get-cocktail-btn" type="button" name="button">Get Cocktail</button>
+		<button class="button random-btn" type="button" name="button">Random Cocktail</button>
+		<sectionc class="content content-background ">
             <div  class="col-1">
                 <h2></h2>
                 <p></p>
