Update of background colors for random cocktail interactions

--- a/CooktailApp/index.html
+++ b/CooktailApp/index.html
@@ -24,7 +24,7 @@
 		<input type="text" name="" value="">
 		<button class="button get-cocktail-btn" type="button" name="button">Get Cocktail</button>
 		<button class="button random-btn" type="button" name="button">Random Cocktail</button>
-		<sectionc class="content content-background ">
+		<section class="content ">
             <div  class="col-1">
                 <h2></h2>
                 <p></p>
