Add styles in css for first-page section

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Pokemon App</title>
+    
 </head>
 <body>
     <section class="first-page">
         <div class="three-circles-container">
-            <div class="start-circle"></div>
-            <div class="middle-circle"></div>
-            <div class="end-circle"></div>
+            <div class="circle start-circle"></div>
+            <div class="circle middle-circle"></div>
+            <div class="circle end-circle"></div>
         </div>
         <div class="big-circle-container">
             <div class="big-circle"></div>
@@ -39,11 +41,10 @@
                 </div>
             </div>
         </div>
-
-
     </section>
-    <section></section>
-    <h1></h1>
+    <section class="middle"></section>
+    <section class="second-page"></section>
+
 
 </body>
 </html>
