Implement styles in first-page section

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -11,9 +11,12 @@
 <body>
     <section class="first-page">
         <div class="three-circles-container">
-            <div class="circle start-circle"></div>
-            <div class="circle middle-circle"></div>
-            <div class="circle end-circle"></div>
+            <div class="two-thirds">
+                <div class="circle start-circle"></div>
+                <div class="circle middle-circle"></div>
+                <div class="circle end-circle"></div>
+            </div>
+            <div class="one-third"></div>
         </div>
         <div class="big-circle-container">
             <div class="big-circle"></div>
@@ -25,19 +28,20 @@
                         <label for="Which Pokemon">Which Pokemon?</label>
                         <input type="text">
                     </div>
-                    <button class="screen-button"></button>
+                    <img src="#" alt="Pokemon">
                 </div>
-                <div class="main-buttons">
-                    <div class="1-col">
-                        <button class="circle-button"></button>
-                        <button class="rectangle-button"></button>
-                    </div>
-                    <div class="2-col">
-                        <button class="up-button">^</button>
-                        <button class="right-button">R</button>
-                        <button class="left-button">L</button>
-                        <button class="down-button"></button>
-                    </div>
+                <button class="screen-button"></button>
+            </div>
+            <div class="main-buttons">
+                <div class="1-col">
+                    <button class="circle-button"></button>
+                    <button class="rectangle-button"></button>
+                </div>
+                <div class="2-col">
+                    <button class="up-button">^</button>
+                    <button class="right-button">R</button>
+                    <button class="left-button">L</button>
+                    <button class="down-button"></button>
                 </div>
             </div>
         </div>
