Work in progress: Adding styles to buttons in 'first-page' section

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -33,15 +33,18 @@
                 <button class="screen-button"></button>
             </div>
             <div class="main-buttons">
-                <div class="1-col">
+                <div class="first-col">
                     <button class="circle-button"></button>
                     <button class="rectangle-button"></button>
                 </div>
-                <div class="2-col">
-                    <button class="up-button">^</button>
-                    <button class="right-button">R</button>
-                    <button class="left-button">L</button>
-                    <button class="down-button"></button>
+                <div class="second-col">
+                    <button class="arrow up-button">^</button>
+                    <div class="right-left-buttons">
+                        <button class="arrow right-button">R</button>
+                        <button class="arrow empty-button">x</button>
+                        <button class="arrow left-button">L</button>
+                    </div>
+                    <button class="arrow down-button"></button>
                 </div>
             </div>
         </div>
