Add link for icons for the arrows

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- Boxicon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+   
     <link rel="stylesheet" href="./css/style.css">
+
     <title>Pokemon App</title>
     
 </head>
@@ -38,13 +43,13 @@
                     <button class="rectangle-button"></button>
                 </div>
                 <div class="second-col">
-                    <button class="arrow up-button">^</button>
+                    <button class="arrow up-button"><i class='bx bxs-up-arrow'></i></button>
                     <div class="right-left-buttons">
-                        <button class="arrow right-button">R</button>
+                        <button class="arrow right-button"><i class='bx bxs-right-arrow' ></i></button>
                         <button class="arrow empty-button">x</button>
-                        <button class="arrow left-button">L</button>
+                        <button class="arrow left-button"><i class='bx bxs-left-arrow' ></i></button>
                     </div>
-                    <button class="arrow down-button"></button>
+                    <button class="arrow down-button"><i class='bx bxs-down-arrow' ></i></button>
                 </div>
             </div>
         </div>
