Adding fetch function and updating classes in HTML, currently in progress

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -31,7 +31,7 @@
                 <div class="screen">
                     <div class="input-data">
                         <label for="Which Pokemon">Which Pokemon?</label>
-                        <input type="text">
+                        <input class="pokemon-name" type="text" placeholder="type a Pokemon">
                     </div>
                     <img src="#" alt="Pokemon">
                 </div>
@@ -56,7 +56,7 @@
     </section>
     <section class="middle"></section>
     <section class="second-page"></section>
-
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
