Implement pokemon's description on screen

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -33,7 +33,11 @@
                         <label for="Which Pokemon">Which Pokemon?</label>
                         <input class="pokemon-name" type="text" placeholder="type a Pokemon">
                     </div>
-                    <img src="#" alt="Pokemon">
+                    <div class="image-description">
+                        <img src="#" alt="Pokemon">
+                        <p class="description">Lorem ipsum dolor sit amet</p>
+                    </div>
+
                 </div>
                 <button class="screen-button"></button>
             </div>
@@ -45,9 +49,9 @@
                 <div class="second-col">
                     <button class="arrow up-button"><i class='bx bxs-up-arrow'></i></button>
                     <div class="right-left-buttons">
-                        <button class="arrow right-button"><i class='bx bxs-right-arrow' ></i></button>
-                        <button class="arrow empty-button">x</button>
                         <button class="arrow left-button"><i class='bx bxs-left-arrow' ></i></button>
+                        <button class="arrow empty-button">x</button>
+                        <button class="arrow right-button"><i class='bx bxs-right-arrow' ></i></button>
                     </div>
                     <button class="arrow down-button"><i class='bx bxs-down-arrow' ></i></button>
                 </div>
