Implement displaying Pokemon's decription on screen

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="image-description">
                         <img src="#" alt="Pokemon">
-                        <p class="description">Lorem ipsum dolor sit amet</p>
+                        <p class="description"></p>
                     </div>
 
                 </div>
