Improving style on the screen section in CSS

--- a/PokemonApp/index.html
+++ b/PokemonApp/index.html
@@ -34,7 +34,7 @@
                         <input class="pokemon-name" type="text" placeholder="type a Pokemon">
                     </div>
                     <div class="image-description">
-                        <img src="#" alt="Pokemon">
+                        <img src="./img/thimo-pedersen-dip9IIwUK6w-unsplash.jpg" alt="Pokemon">
                         <p class="description"></p>
                     </div>
 
